<resources>
    <string name="app_name">My Application</string>
    <string name="add">ADD</string>
    <string name="confirm">confirm</string>
    <string name="go_back">go back</string>
    <string name="movie_for_you">MOVIE FOR YOU</string>
    <string name="please_sign_in">Please Sign In :</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_register">Or Register</string>
    <string name="tickets">tickets</string>
    <string name="theatre">theatre</string>
    <string name="child">child</string>
    <string name="adult">adult</string>
    <string name="order">order</string>
    <string name="remove">remove</string>
    <string name="reviews">REVIEWS</string>
    <string name="name">Name</string>
    <string name="write_a_review">WRITE A REVIEW</string>
    <string name="subject">Subject</string>
    <string name="enter_your_request">Enter Your Request</string>
    <string name="send">SEND</string>
    <string name="back">BACK</string>
    <string name="planet">planet</string>
    <string name="cinema_city">cinema_city</string>
    <string name="hot_globus">hot_globus</string>
    <string name="write_your_review">Write Your Review:</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="movie_title">Movie Title :</string>
    <string name="movie_title_hebrew">"Movie Title (Hebrew) : "</string>
    <string name="trailer_link">"Trailer Link : "</string>
    <string name="rating">"Rating : "</string>
    <string name="movie_details">Movie Details :</string>
    <string name="movie_details_hebrew">"Movie Details (Hebrew) : "</string>
    <string name="choose_the_right_amount_of_seats">Choose the right amount of seats</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="movie_deleted_successfully">Movie deleted successfully</string>
    <string name="error_deleting_movie">Error deleting movie: %1$s</string>
    <string name="error_getting_documents">Error getting documents: %1$s</string>
    <string name="title_to_remove_is_null">Title to remove is null</string>
    <string name="you_do_not_have_permission_to_delete_movies">You do not have permission to delete movies</string>
    <string name="type_your_amount_of_tickets">Type Your Amount Of Tickets</string>
    <string name="choose_your_cinema_theatre">Choose Your Cinema Theatre</string>
    <string name="you_can_t_write_a_review_without_being_logged_in">You can\'t write a review without being logged in</string>
    <string name="please_write_a_review">Please Write A Review</string>
    <string name="review_added_successfully">Review added successfully</string>
    <string name="failed_to_add_review">Failed to add review: %1$s</string>
</resources>