<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/background_set"
    tools:context=".Repository.UI.MoviePageActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/moviecard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/semiTransparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_moviepage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/cs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_movie_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_details_movie_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/ticketsbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="@string/tickets" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calendercard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"


        app:cardBackgroundColor="@color/semiTransparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/cardview_light_background"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/datebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/theatrebtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:gravity="center"
                    android:text="@string/theatre"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ticketscard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/semiTransparent"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:text="+"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/childedittxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/child"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/childpriceedittxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0$"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/minus2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:text="-"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:text="+"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/adultedittxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/adult"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/adulteditpricetxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="0$"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/checkoutbtn"
                    android:text="-"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="@string/order"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/backbtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="@drawable/checkoutbtn"
        android:text="@string/go_back"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/removebtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:background="@drawable/checkoutbtn"
        android:text="@string/remove"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>