<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".Repository.UI.TheatrePopUp"
    tools:ignore="MissingDefaultResource"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/th1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/checkoutbtn"
            android:text="@string/planet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/th2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/checkoutbtn"
            android:text="@string/cinema_city"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/th3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/checkoutbtn"
            android:text="@string/hot_globus"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/hours1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="11:00" />

            <Button
                android:id="@+id/btn13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="13:00" />

            <Button
                android:id="@+id/btn15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="15:00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hours2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="17:00" />

            <Button
                android:id="@+id/btn19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="19:00" />

            <Button
                android:id="@+id/btn21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/checkoutbtn"
                android:text="21:00" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/theatre_close_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue"
            android:clickable="true"
            android:src="@android:drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>